--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="pt-BR">
 
   <head>
-
+    
+    <base target="_blank" href="https://pingobras.glitch.me/">
     <meta charset="utf-8" />
     <meta http-equiv="Refresh" content="120">
     <meta name="viewport" content="width=device-width, initial-scale=0.7" />
