--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="https://cdn.glitch.global/b39d6a4a-0e14-4b41-930d-29d3ccd6c137/PINGOBRAS icon.png?v=1665177105635" />
     <links></links>
     
-  <title>PINGOBRAS LOBBY</title>
+  <title>IFES SISTEMAS DE INFORMAÇÃO</title>
   </head>  
   <body>
     <div class="site-altura">
@@ -32,8 +32,8 @@
 </body>
 
   <scripts>
-    <script src="js/links.js" defer></script>
-    <script src="js/main.js" defer></script>
+    <script src="./js/links.js" defer></script>
+    <script src="./js/main.js" defer></script>
     </scripts>
   <autoscripts>
     <script src="js/load-scripts.js"></script>
