--- a/index.html
+++ b/index.html
@@ -214,15 +214,14 @@
       </div>
     </footer>
     <scripts>
-      <script src="/ifes/table-render.js" defer></script>
       <script src="./src/js/index.js" defer></script>
-      <script src="./src/js/links.js" defer></script>
+      <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
     </scripts>
     <autoscripts>
-      <script src="./src/js/load-scripts.js"></script>
+      <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script>
     </autoscripts>
     <host>
-      <script src="/src/js/load-host.js" defer></script>
+      <script src="https://pingobras.glitch.me/src/js/load-host.js" defer></script>
     </host>
   </body>
 </html>
