--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
     </scripts>
     <autoscripts>
-      <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script>
+      <script src="https://raw.githubusercontent.com/LUISDASARTIMANHAS/PINGOBRAS/main/src/js/load-scripts.js"></script>
     </autoscripts>
     <host>
       <script src="https://pingobras.glitch.me/src/js/load-host.js" defer></script>
