--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <!--   <meta http-equiv="Refresh" content="120"> -->
+      <meta http-equiv="Refresh" content="120">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
