--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </footer>
     <scripts>
       <script src="./src/js/index.js" defer></script>
-      <script src="./src/js/links.js" defer></script>
+      <script src="./src/js/table-render.js" defer></script>
     </scripts>
     <autoscripts>
       <script src="./src/js/load-scripts.js"></script>
