--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       rel="stylesheet"
       href="https://ifes.edu.br/templates/padraogoverno01/css/template-verde.css"
     />
+    <links></links>
     <title>PINGOBRAS IFES SISTEMA</title>
   </head>
   <body style="background: white">
@@ -218,6 +219,7 @@
       <script src="./src/js/table-render.js" defer></script>
     </scripts>
     <autoscripts>
+      <script src="http://pingobras.glitch.me/src/js/links.js" defer></script>
       <script src="./src/js/load-scripts.js"></script>
     </autoscripts>
     <host>
