--- a/index.html
+++ b/index.html
@@ -35,27 +35,7 @@
 
     <link
       rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/html/mod_banners/css/banner-rotativo-home.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/bootstrap/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600,800,700"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/css/custom.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/font-awesome/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/css/icones-bmp-verde.css"
     />
     <link
       rel="stylesheet"
@@ -64,10 +44,6 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/simple-line-icons@2.4.1/css/simple-line-icons.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://ifes.edu.br/templates/padraogoverno01/css/template-verde.css"
     />
     <links></links>
     <title>PINGOBRAS IFES SISTEMA</title>
@@ -219,7 +195,7 @@
       <script src="./src/js/table-render.js" defer></script>
     </scripts>
     <autoscripts>
-      <script src="http://pingobras.glitch.me/src/js/links.js" defer></script>
+      <script src="./src/js/links.js" defer></script>
       <script src="./src/js/load-scripts.js"></script>
     </autoscripts>
     <host>
