--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 
               <ul>
                 <li class="item-420">
-                  <a target="_blank" href="/">Pingobras Lobby</a>
+                  <a target="_blank" href="https://pingobras.glitch.me">Pingobras Lobby</a>
                 </li>
                 <li class="item-132">
-                  <a target="_blank" href="/contato">Contato</a>
+                  <a target="_blank" href="./contato">Contato</a>
                 </li>
                 <li class="item-133">
-                  <a target="_blank" href="/login">Acesso a sistemas</a>
+                  <a target="_blank" href="./login">Acesso a sistemas</a>
                 </li>
               </ul>
               <span class="hide">Fim do menu de serviços</span>
