--- a/DesWeb1/HelloWorld/index.html
+++ b/DesWeb1/HelloWorld/index.html
@@ -1,42 +1,100 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Refresh" content="120" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      http-equiv="Strict-Transport-Security"
+      content="max-age=31536000; includeSubDomains; preload"
+    />
+    <link
+      rel="icon"
+      href="https://cdn.glitch.global/b39d6a4a-0e14-4b41-930d-29d3ccd6c137/PINGOBRAS icon.png?v=1665177105635"
+    />
+    <link rel="stylesheet" href="./src/css/animantions.css" />
+    <links></links>
+    <link rel="stylesheet" href="./src/css/reset.css" />
 
-<head>
+    <title>Primeira Página</title>
+  </head>
+  <body>
+    <header>
+      <a href="./pagina02.html">Pagina 2</a>
+    </header>
+    <main>
+      <tela>
+        <h1 rgb>HTML Base!</h1>
+        <p>Olá Mundo!</p>
+        <p>Olá Turma de SI da disciplina de Desenvolvimento Web 1</p>
+      </tela>
 
-		<meta charset="utf-8" />
-  <meta http-equiv="Refresh" content="30">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
-		<link rel="icon" href="https://cdn.glitch.global/b39d6a4a-0e14-4b41-930d-29d3ccd6c137/PINGOBRAS icon.png?v=1665177105635" />
-	<links></links>
+      <tela class="">
+        <h2>Está e minha primeira página da disciplina</h2>
+        <pre>
+          Tags
+          <code>strong ou b- Negrito
+            em ou i - Itálico
+            mark - Grifado
+            del - Tachado
+            ins - Sublinhado
+            sub - Texto subescrito
+            sup - Texto sobrescrito</code>
+        </pre>
+        <p>
+          <em>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <b>Reiciendis</b> harum nostrum at facere quidem rem ex, nesciunt
+            recusandae unde, dolorum est modi vitae eum explicabo cumque sequi
+            natus, <del> perferendis accusantium neque! </del> Est, tempora,
+            maiores soluta eaque quia animi, dolor ipsum excepturi ullam dolores
+            ratione unde expedita quo itaque sunt recusandae quisquam ea! Id,
+            neque enim labore quae fugit culpa iure quis vero fugiat voluptatem,
+            <mark>
+              aut error? Ducimus reiciendis quo at atque unde,
+              <sub> porro </sub>
+              quaerat praesentium accusamus doloribus asperiores consectetur
+              adipisci ullam aut quae a corporis eius assumenda ipsa eum
+              deserunt rerum officiis dolore
+              <ins>temporibus? Aliquam consectetur in</ins>
+              soluta cupiditate
+              <span style="background-color: red"> quisquam! </span>
+            </mark>
+          </em>
+        </p>
 
-		<title>PINGOBRAS LOBBY</title>
-</head>
-<body>
-		<main>
+        <br />
 
-			<h1>HTML Base!</h1>
-			<p>Olá Mundo!</p>
-
-		</main>
-		<footer>
-				<div id="direitos" class="direitos">
-						<div class="loading ">
-								<p class="load "></p>
-						</div>
-				</div>
-		</footer>
-<scripts>
-	<script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
-</scripts>
-<autoscripts>
-  <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script>
-	<script></script>
-</autoscripts>
-<host>
-	<script src="https://pingobras.glitch.me/src/js/load-host.js" defer></script>
-</host>
-</body>
+        <a
+          href="https://pingobras.glitch.me/"
+          class="container__link"
+          target="_blank"
+          alt="Link Página do IFES"
+        >
+          Ir para página da PINGOBRAS
+        </a>
+      </tela>
+    </main>
+    <footer>
+      <div id="direitos" class="direitos">
+        <div class="loading">
+          <p class="load"></p>
+        </div>
+      </div>
+    </footer>
+    <scripts>
+      <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
+    </scripts>
+    <autoscripts>
+      <script src="https://pingobras.glitch.me/src/js/load-scripts.js"></script>
+      <script></script>
+    </autoscripts>
+    <host>
+      <script
+        src="https://pingobras.glitch.me/src/js/load-host.js"
+        defer
+      ></script>
+    </host>
+  </body>
 </html>
