updated mesclagem de linhas

--- a/DesWeb1/Lista E Tabela/tabelas.html
+++ b/DesWeb1/Lista E Tabela/tabelas.html
@@ -123,6 +123,49 @@
           </tbody>
         </table>
       </tela>
+
+      <tela>
+        <h1 rgb>Tabela Simples com Mesclagem de Linhas</h1>
+        <table>
+          <tbody>
+            <tr>
+              <td rowspan="2">Mesclagem da Linha 1 e 2</td>
+              <td>Linha 1 Coluna 2</td>
+            </tr>
+            <tr>
+              <td>Linha 2 Coluna 2</td>
+            </tr>
+            <tr>
+              <td>Linha 3 Coluna 1</td>
+              <td>Linha 3 Coluna 2</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <h2>Exercício Mesclagem de Linha 4 X 3</h2>
+
+        <table>
+          <tbody>
+            <tr>
+              <td>Linha 1 Coluna 1</td>
+              <td>Linha 1 Coluna 2</td>
+              <td rowspan="2">Mesclagem da Linha 1 e 2</td>
+            </tr>
+            <tr>
+              <td rowspan="3">mesclagem da Linha 1,2 e 3</td>
+              <td>Linha 2 Coluna 2</td>
+            </tr>
+            <tr>
+              <td>Linha 3 Coluna 2</td>
+              <td>Linha 3 Coluna 3</td>
+            </tr>
+            <tr>
+              <td>Linha 4 Coluna 2</td>
+              <td>Linha 4 Coluna 3</td>
+            </tr>
+          </tbody>
+        </table>
+      </tela>
     </main>
     <footer>
       <div id="direitos" class="direitos">
