--- a/DesWeb1/Lista E Tabela/exercicio-avaliativo.html
+++ b/DesWeb1/Lista E Tabela/exercicio-avaliativo.html
@@ -17,43 +17,47 @@
     <links></links>
     <link rel="stylesheet" href="./src/css/reset.css" />
 
-    <title>Listas de Tópicos</title>
+    <title>Tabelas</title>
   </head>
   <body>
     <header>
-      <a href="./tabelas.html">Tabelas</a>
-      <a href="./exercicio-avaliativo.html">Exercício Avaliativo</a>
+      <a href="/">Voltar</a>
     </header>
     <main>
       <tela>
-        <h2 rgb>Lista do Supermercado</h2>
-        <ul class="lista-de-compras">
-          <li>Carne</li>
-          <ul>
-            <li>Picanha</li>
-            <li>Costela</li>
-            <li>Linguiça Suina</li>
-          </ul>
-          <li>Pão</li>
-          <li>Cerveja</li>
-          <li>Tomate</li>
-          <li>Cebola</li>
-          <li>Carvão</li>
-          <li>Red Bull</li>
-        </ul>
-      </tela>
-
-      <tela>
-        <h1>Listas Enumeradas</h1>
-        <h2 rgb>Séries que mais gosto</h2>
-        <ol type="I">
-          <li>Cobra Kai</li>
-          <li>La Casa de Papel</li>
-          <li>The Good Doctor</li>
-          <li>Shameless</li>
-          <li>Stranger Things</li>
-          <li>Supernatural</li>
-        </ol>
+        <table>
+					<thead>
+            <tr>
+              <th colspan="5">TABELA DE DADOS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+							<td rowspan="2">D1</td>
+							<td>L1C1</td>
+							<td>L1C2</td>
+							<td>L1C3</td>
+							<td rowspan="2">D1</td>
+						</tr>
+						<tr>
+							<td>L2C1</td>
+							<td>L2C2</td>
+							<td>L2C3</td>
+						</tr>
+						<tr>
+							<td rowspan="2">D2</td>
+							<td>L3C1</td>
+							<td>L3C2</td>
+							<td>L3C3</td>
+							<td rowspan="2">D2</td>
+						</tr>
+						<tr>
+							<td>L4C1</td>
+							<td>L4C2</td>
+							<td>L4C3</td>
+						</tr>
+          </tbody>
+        </table>
       </tela>
     </main>
     <footer>
