--- a/DesWeb1/Lista E Tabela/tabelas.html
+++ b/DesWeb1/Lista E Tabela/tabelas.html
@@ -165,6 +165,36 @@
             </tr>
           </tbody>
         </table>
+
+      <h2>Exercício Mesclagem de Linha E Colunas 5 X 4</h2>
+
+        <table>
+          <tbody>
+            <tr>
+              <td>Linha 1 Coluna 1</td>
+              <td colspan="3">Linha 1 Mesclagem da coluna 2,3 e 4</td>
+            </tr>
+            <tr>
+              <td rowspan="2">Mesclagem da Linha 2 e 3 Coluna 1</td>
+              <td>Linha 2 Coluna 2</td>
+              <td colspan="2">Linha 2 Mesclagem da coluna 2 e 4</td>
+            </tr>
+            <tr>
+              <td rowspan="3">Mesclagem da Linha 3,4 e 5 Coluna 1 Coluna 2</td>
+              <td>Linha 3 Coluna 3</td>
+              <td>Linha 3 Coluna 4</td>
+            </tr>
+            <tr>
+              <td>Linha 4 Coluna 1</td>
+              <td>Linha 4 Coluna 3</td>
+              <td rowspan="2">Mesclagem da Linha 4 e 5 Coluna 4</td>
+            </tr>
+            <tr>
+              <td>Linha 5 Coluna 1</td>
+              <td>Linha 5 Coluna 3</td>
+            </tr>
+          </tbody>
+        </table>
       </tela>
     </main>
     <footer>
