--- a/Analise-de-Sistemas/index.html
+++ b/Analise-de-Sistemas/index.html
@@ -1181,7 +1181,7 @@
                       >
                         <span class="userbutton"
                           ><span class="usertext mr-1"
-                            >Luis Augusto de Souza Carvalho</span
+                            >Anonimo</span
                           ><span class="avatars"
                             ><span class="avatar current"
                               ><img
@@ -8628,7 +8628,7 @@ Oi Galerinha! Sejam bem vindos à sala virtual da.... Selecione para marcar como
                                   width="16"
                                   height="16"
                                   alt=""
-                                />Luis Augusto de Souza Carvalho</a
+                                />Anonimo</a
                               >
                             </div>
                             <div class="uservisibility">
@@ -12377,7 +12377,7 @@ Oi Galerinha! Sejam bem vindos à sala virtual da.... Selecione para marcar como
                 <a
                   href="https://ava3.cefor.ifes.edu.br/user/profile.php"
                   title="Ver perfil"
-                  >Luis Augusto de Souza Carvalho</a
+                  >Anonimo</a
                 >
                 (<a href="https://ava3.cefor.ifes.edu.br/login/logout.php?0="
                   >Sair</a
