--- a/Calculo-1/index.html
+++ b/Calculo-1/index.html
@@ -1178,7 +1178,7 @@
                       >
                         <span class="userbutton"
                           ><span class="usertext mr-1"
-                            >Luis Augusto de Souza Carvalho</span
+                            >Anonimo</span
                           ><span class="avatars"
                             ><span class="avatar current"
                               ><img
@@ -5284,7 +5284,7 @@
                 <a
                   href="https://ava3.cefor.ifes.edu.br/user/profile.php"
                   title="Ver perfil"
-                  >Luis Augusto de Souza Carvalho</a
+                  >Anonimo</a
                 >
                 (<a href="https://ava3.cefor.ifes.edu.br/login/logout.php?0="
                   >Sair</a
