updated file structure

--- a/OAC/index.html
+++ b/OAC/index.html
@@ -1054,7 +1054,7 @@
                           data-toggle="dropdown"
                           href="#"
                           ><img
-                            src="https://ava.cefor.ifes.edu.br/pluginfile.php/3125538/user/icon/ifescustom/f1?rev=40157375"
+                            src=""
                             alt="luis-das-artimanhas-img-perfil.png"
                             title="luis-das-artimanhas-img-perfil.png"
                             class="userpicture"
@@ -12993,7 +12993,7 @@ Para quem..."
                       href="https://ava.cefor.ifes.edu.br/user/view.php&amp;course=34463"
                       title="23 segundos"
                       ><img
-                        src="https://ava.cefor.ifes.edu.br/pluginfile.php/3125538/user/icon/ifescustom/f1?rev=40157375"
+                        src=""
                         alt=""
                         title=""
                         class="userpicture"
