--- a/DesWeb1/Seminario de CSS/index.html
+++ b/DesWeb1/Seminario de CSS/index.html
@@ -39,6 +39,11 @@
             >
           </li>
           <li>
+            <input type="radio" value="vw" name="unit" id="vw" /><label for="vw"
+              >vw - Largura da viewport</label
+            >
+          </li>
+          <li>
             <input type="radio" value="vh" name="unit" id="vh" /><label for="vh"
               >vh - Altura da viewport</label
             >
