--- a/DesWeb1/Atividade de Bandeiras/bandeira-Israel.html
+++ b/DesWeb1/Atividade de Bandeiras/bandeira-Israel.html
@@ -16,6 +16,7 @@
     <links></links>
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/bandeira-reset.css" />
     <link rel="stylesheet" href="./src/css/exercicio1.css" />
 
 
