--- a/DesWeb1/Atividade de Bandeiras/bandeira-argentina.html
+++ b/DesWeb1/Atividade de Bandeiras/bandeira-argentina.html
@@ -16,13 +16,14 @@
     <links></links>
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/bandeira-reset.css" />
     <link rel="stylesheet" href="./src/css/exercicio1.css" />
 
 
     <title>Exercicio 1</title>
   </head>
   <body>
-    <div rgb class="container bandeira-deitado">
+    <div rgb class="argentina container bandeira-deitado">
       <div class="bandeira-item azul-claro"></div>
       <div class="bandeira-item branco">
         <img class="icone-bandeira" src="./src/imgs/Sol_de_Mayo-Bandera_de_Argentina.svg" alt="Sol_de_Mayo-Bandera_de_Argentina.svg">
