--- a/DesWeb1/Atividade de Bandeiras/bandeira-dinamarca.html
+++ b/DesWeb1/Atividade de Bandeiras/bandeira-dinamarca.html
@@ -17,16 +17,25 @@
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/bandeira-reset.css" />
-    <link rel="stylesheet" href="./src/css/exercicio1.css" />
+    <link rel="stylesheet" href="./src/css/dinamarca.css" />
 
 
     <title>Exercicio 1</title>
   </head>
   <body>
-    <div rgb class="container">
-      <div class="bandeira-item verde"></div>
-      <div class="bandeira-item branco"></div>
-      <div class="bandeira-item laranja"></div>
+    <div rgb class="container bandeira-deitado">
+      <div class="bandeira-item vermelho">
+        <div class="p1"></div>
+        <div class="p2"></div>
+        <div class="p3"></div>
+      </div>
+      <div class="bandeira-item branco">
+      </div>
+      <div class="bandeira-item vermelho">
+        <div class="p1"></div>
+        <div class="p2"></div>
+        <div class="p3"></div>
+      </div>
     </div>
     <scripts>
       <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
