--- a/DesWeb1/Atividade de Bandeiras/bandeira-texas.html
+++ b/DesWeb1/Atividade de Bandeiras/bandeira-texas.html
@@ -17,16 +17,14 @@
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/bandeira-reset.css" />
-    <link rel="stylesheet" href="./src/css/exercicio1.css" />
-
 
     <title>Exercicio 1</title>
   </head>
   <body>
-    <div rgb class="container">
-      <div class="bandeira-item verde"></div>
+    <div rgb class="container bandeira-deitado">
       <div class="bandeira-item branco"></div>
-      <div class="bandeira-item laranja"></div>
+      <div class="bandeira-item azul"></div>
+      <div class="bandeira-item vermelho"></div>
     </div>
     <scripts>
       <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
