UPDATED DESV WEB

--- a/DesWeb1/Atividade de Layouts/index.html
+++ b/DesWeb1/Atividade de Layouts/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./src/css/animantions.css" />
     <links></links>
     <link rel="stylesheet" href="./src/css/reset.css" />
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/layout1.css" />
 
     <title>Listas de Tópicos</title>
   </head>
@@ -40,27 +40,27 @@
 
       <div class="main__container-item">
         <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+        <p>Carros</p>
       </div>
 
       <div class="main__container-item">
         <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+        <p>Barcos</p>
       </div>
 
       <div class="main__container-item">
         <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+        <p>Calças</p>
       </div>
 
       <div class="main__container-item">
         <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+        <p>Bermudas</p>
       </div>
 
       <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+        <img src="./src/imgs/oceanImageBlank.jpg" alt="teste" />
+        <p>Camisas</p>
       </div>
     </main>
     <!-- <scripts>
