--- a/DesWeb1/Atividade de Layouts/layout4.html
+++ b/DesWeb1/Atividade de Layouts/layout4.html
@@ -34,31 +34,47 @@
     </header>
     <main>
       <section>
-        <div class="main__container-item">
+        <div class="main__container-item video">
           <img src="./src/imgs/oceanImageBlank.jpg" alt="teste" />
-          <p>Alimentação Saudável</p>
+          <p>Video 1</p>
         </div>
 
-        <div class="main__container-item">
+        <div class="main__container-item video">
           <img src="./src/imgs/oceanImageBlank.jpg" alt="teste" />
-          <p>Alimentação Saudável</p>
+          <p>Video 2</p>
         </div>
 
-        <div class="main__container-item">
+        <div class="main__container-item video">
           <img src="./src/imgs/oceanImageBlank.jpg" alt="teste" />
-          <p>Alimentação Saudável</p>
+          <p>Video 3</p>
         </div>
       </section>
-      <section>
-        <div class="main__container-item">
+      <section class="test">
+        <div class="main__container-item banner">
           <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-          <p>Como é trabalhar com TI</p>
+          <p>Banner</p>
         </div>
 
-        <div class="main__container-item">
-          <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-          <p>Benefícios dos Exercícios Físicos</p>
-        </div>
+        <ul class="main__container-item sugestao">
+          <li>
+            <a href="#">
+              <img class="thumbnail" src="src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="">
+              <p>Sugestão</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="thumbnail" src="src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="">
+              <p>Sugestão</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img class="thumbnail" src="src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="">
+              <p>Sugestão</p>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
     <!-- <scripts>
