--- a/DesWeb1/Atividade Avaliativa de Layouts/index.html
+++ b/DesWeb1/Atividade Avaliativa de Layouts/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/layout1.css" />
 
-    <title>Listas de Tópicos</title>
+    <title>Atividade: Flexbox Layouts</title>
   </head>
   <body>
     <header>
@@ -31,37 +31,43 @@
         <a href="#">Produtos</a>
         <a href="#">Contato</a>
       </nav>
+      <div class="logo">
+        <h1>Logo</h1>
+      </div>
     </header>
     <main>
-      <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bicicletas</p>
+      <div class="main__container-item video-container">
+        <div class="video"></div>
+        <p>video 1</p>
       </div>
-
-      <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Carros</p>
-      </div>
-
-      <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Barcos</p>
-      </div>
-
-      <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Calças</p>
-      </div>
-
-      <div class="main__container-item">
-        <img src="./src/imgs/OceanImageBank_AlexMustard_01.jpg" alt="teste" />
-        <p>Bermudas</p>
-      </div>
-
-      <div class="main__container-item">
-        <img src="./src/imgs/oceanImageBlank.jpg" alt="teste" />
-        <p>Camisas</p>
-      </div>
+      <aside class="recomendados">
+        <ul>
+          <li>
+            <div class="main__container-item thumbnail-item">
+              <div class="main__container-item thumbnail"></div>
+              <p>Recomendado 1</p>
+            </div>
+          </li>
+          <li>
+            <div class="main__container-item thumbnail-item">
+              <div class="main__container-item thumbnail"></div>
+              <p>Recomendado 2</p>
+            </div>
+          </li>
+          <li>
+            <div class="main__container-item thumbnail-item">
+              <div class="main__container-item thumbnail"></div>
+              <p>Recomendado 3</p>
+            </div>
+          </li>
+          <li>
+            <div class="main__container-item thumbnail-item">
+              <div class="main__container-item thumbnail"></div>
+              <p>Recomendado 4</p>
+            </div>
+          </li>
+          </ul>
+      </aside>
     </main>
     <!-- <scripts>
       <script src="https://pingobras.glitch.me/src/js/links.js" defer></script>
